--- a/track/track.html
+++ b/track/track.html
@@ -385,5 +385,6 @@
         </div>
     </div>
     <script src="../main.js"></script>
+    <script type="module" src="../firebase-config.js"></script>
 </body>
 </html>
