add some css for track page

--- a/song detail/detail.html
+++ b/song detail/detail.html
@@ -30,7 +30,7 @@
             </li>
 
             <li>
-                <a href="#">
+                <a href="../track/track.html">
                     <i class='bx bxs-music' style="color: #021526;"></i>
                     <span class="nav-item"  style="color: #021526;">Tracks</span>
                 </a>
@@ -78,7 +78,7 @@
                             <input type="range" value="0" id="progress">
                             <i id="plus" class='bx bx-plus-circle'></i>
                             <audio id="song">
-                                <source src="../mp3/The Weeknd, Playboi Carti - Timeless (Official Audio).mp3" type="audio/mpeg">
+                                <source src="../mp3/21 Savage - redrum (Official Audio).mp3" type="audio/mpeg">
                             </audio>
                         </div>
                     </div>
