--- a/track/track.html
+++ b/track/track.html
@@ -75,6 +75,8 @@
                 </div>
             </header>
 
+            <h1 class="menuTitle">OUR <br> SONGS</h1>
+
             <div class="add-song">
                 <div class="popUp" id="popup">
                     <div class="add-product">
