--- a/home/home.html
+++ b/home/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harmoniq</title>
+    <title>MVWorld</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,38 +21,38 @@
                 <i class="bx bx-menu" id="btn"></i>
             </div>
             
-            <ul>
+            <ul id="nav">
                 
-                <li>
-                    <a href="#">
+                <li id="0">
+                    <a href="#" id="nav0">
                         <i class='bx bxs-home-heart' style="color: #021526;"></i>
                         <span class="nav-item" style="color: #021526;">Home</span>
                     </a>
                 </li>
 
-                <li>
-                    <a href="../track/track.html">
+                <li id="1">
+                    <a href="../track/track.html" id="nav1">
                         <i class='bx bxs-music'></i>
                         <span class="nav-item">Tracks</span>
                     </a>
                 </li>
 
-                <li>
-                    <a href="../list/list.html">
+                <li id="2">
+                    <a href="../list/list.html" id="nav2">
                         <i class='bx bxs-playlist' ></i>
                         <span class="nav-item">List</span>
                     </a>
                 </li>
 
-                <li>
-                    <a href="../signup/signup.html">
+                <li id="3">
+                    <a href="../signup/signup.html" id="nav3">
                         <i class='bx bx-user-plus'></i>
                         <span class="nav-item">Join</span>
                     </a>
                 </li>
 
-                <li>
-                    <a href="../login/login.html">
+                <li id="4">
+                    <a href="../login/login.html" id="nav4"> 
                         <i class='bx bxs-user-check'></i>
                         <span class="nav-item">LogIn</span>
                     </a>
@@ -71,11 +71,11 @@
 
                 <div class="random">
                     <div class="left">
-                        <h5>Random song for your day</h5>
+                        <h5>Random MV for your day</h5>
                         <div class="info">
                             <h2>Hi</h2>
-                            <h4>HI HI HI</h4><br>
-                            <h5>5 million plays</h5>
+                            <h4 id="artist">HI HI HI</h4><br>
+                            <h5 id="plays">5 million plays</h5>
                             <div class="button">
                                 <button>Listen Now</button>
                                 <i class="bx bxs-heart"></i>
@@ -115,7 +115,7 @@
 
                     <div class="music-list">
                         <div class="header">
-                            <h5>Top Songs</h5>
+                            <h5>Top MV</h5>
                         </div>
 
                         <div class="items">
