function add MV,, fixed css, finish project

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -17,19 +17,18 @@
     <div class="container">
       <div class="left-panel">
         <div class="logo-container">
-          <div class="logo">MVWorld</div>
+          <div class="logo"><img id="small-logo" src="../img/logo.png" alt=""></div>
         </div>
-        <a href="../home/home.html" class="back-link">Back to website →</a>
+        
         <div class="bg-img"></div>
-        <audio>
-            <source src="" type="audio/mpeg">
-        </audio>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZCTJl40ONSQ?controls=0&autoplay=1&loop=1" style="border-radius: 15px; margin: 40px 0; position: relative; right: 10px"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <div class="hero-text">
           <h2>Create MVs,<br>Creating Memories</h2>
         </div>
       </div>
       <div class="right-panel">
         <div class="form-container">
+          <a href="../home/home.html" class="back-link">Back to website →</a>
           <h1>Create an account</h1>
           <p class="login-prompt">Already have an account? <a href="../login/login.html">Log in</a></p>
             
