--- a/login/login.html
+++ b/login/login.html
@@ -15,15 +15,16 @@
     <div class="container">
       <div class="left-panel">
         <div class="logo-container">
-          <div class="logo">MVWorld</div>
+          <div class="logo"><img id="small-logo" src="../img/logo.png" alt=""></div>
         </div>
-        <a href="../home/home.html" class="back-link">Back to website →</a>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Kvrk12W5qs8?controls=0&autoplay=1&loop=1" style="border-radius: 15px; margin: 40px 0; position: relative; right: 10px" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"></iframe>
         <div class="hero-text">
           <h2>Create MVs,<br>Creating Memories</h2>
         </div>
       </div>
       <div class="right-panel">
         <div class="form-container">
+          <a href="../home/home.html" class="back-link">Back to website →</a>
           <h1>Log in</h1>
           <p class="login-prompt">Haven't got an account? <a href="../signup/signup.html">Sign up</a></p>
             
