--- a/home/home.html
+++ b/home/home.html
@@ -36,12 +36,12 @@
                     </a>
                 </li>
 
-                <!-- <li id="2">
+                <li id="2">
                     <a href="../list/list.html" id="nav2">
                         <i class='bx bxs-playlist' ></i>
                         <span class="nav-item">List</span>
                     </a>
-                </li> -->
+                </li>
 
                 <li id="3">
                     <a href="../signup/signup.html" id="nav3">
@@ -54,6 +54,13 @@
                     <a href="../login/login.html" id="nav4"> 
                         <i class='bx bxs-user-check'></i>
                         <span class="nav-item">LogIn</span>
+                    </a>
+                </li>
+
+                <li id="5">
+                    <a id="nav4"> 
+                        <i class='bx bxs-log-out'></i>
+                        <span class="nav-item">Logout</span>
                     </a>
                 </li>
             </ul>
