--- a/list/list.html
+++ b/list/list.html
@@ -58,6 +58,13 @@
                         <span class="nav-item">LogIn</span>
                     </a>
                 </li>
+
+                <li id="5">
+                    <a id="nav4"> 
+                        <i class='bx bxs-log-out'></i>
+                        <span class="nav-item">Logout</span>
+                    </a>
+                </li>
             </ul>
         </div>
 
