--- a/song detail/detail.html
+++ b/song detail/detail.html
@@ -89,8 +89,7 @@
                 <div class="text-container">
                     <div id="item1"></div>
                     <div id="action">
-                        <div id="fav"><i class='bx bx-heart' ></i></div>
-                        <div id="addList"><i class='bx bx-list-plus'></i></div>
+                        <div id="fav"></div>
                     </div>
                     
                 </div>
