--- a/home/home.html
+++ b/home/home.html
@@ -14,9 +14,11 @@
     <div class="bg">
         <div class="sidebar">
             <div class="top">
-                <div class="logo">
-                    <img id="small-logo" src="../img/logo.png" alt="">
-                </div>
+                <a href="./home.html">
+                    <div class="logo">
+                        <img id="small-logo" src="../img/logo.png" alt="">
+                    </div>
+                </a>
                 <i class="bx bx-menu" id="btn"></i>
             </div>
             
