--- a/list/list.html
+++ b/list/list.html
@@ -14,10 +14,11 @@
     <div class="bg">
         <div class="sidebar">
             <div class="top">
-                <div class="logo">
-                    <i class="bx bxl-deezer"></i>
-                    <span>MVWorld</span>
-                </div>
+                <a href="../home/home.html">
+                    <div class="logo">
+                        <img id="small-logo" src="../img/logo.png" alt="">
+                    </div>
+                </a>
                 <i class="bx bx-menu" id="btn"></i>
             </div>
             
