--- a/track/track.html
+++ b/track/track.html
@@ -13,9 +13,11 @@
 <body>
     <div class="sidebar">
         <div class="top">
-            <div class="logo">
-                <img id="small-logo" src="../img/logo.png" alt="">
-            </div>
+            <a href="../home/home.html">
+                <div class="logo">
+                    <img id="small-logo" src="../img/logo.png" alt="">
+                </div>
+            </a>
             <i class="bx bx-menu" id="btn"></i>
         </div>
         
