--- a/track/track.html
+++ b/track/track.html
@@ -40,7 +40,7 @@
             <li>
                 <a>
                     <i class='bx bxs-plus-circle' id="add" ></i>
-                    <span class="nav-item" >Add</span>
+                    <span id="add-span" class="nav-item" >Add</span>
                 </a>
                 
             </li>
