--- a/login/login.html
+++ b/login/login.html
@@ -31,7 +31,7 @@
             
             <form>
                 <div class="name-fields">
-                <input id="username"  type="text" placeholder="Username">
+                <input id="email"  type="text" placeholder="Email">
                 </div>
                 <div class="password-field">
                     <input id="password"  type="password" placeholder="Enter your password">
