--- a/track/track.html
+++ b/track/track.html
@@ -37,9 +37,9 @@
                 </a>
             </li>
 
-            <li>
+            <li id="add">
                 <a>
-                    <i class='bx bxs-plus-circle' id="add" ></i>
+                    <i class='bx bxs-plus-circle'  ></i>
                     <span id="add-span" class="nav-item" >Add</span>
                 </a>
                 
