--- a/song detail/detail.html
+++ b/song detail/detail.html
@@ -87,18 +87,26 @@
                     </div>
                 </div>
                 
-                <div class="text-container">
+                <div id="song-list" class="text-container">
+
+                    <h2>Other MVs:</h2>
                     <div id="song1">
                         <div class="song-title"></div>
                         <img src="" alt="">
+                        <i class='bx bx-play'></i>
+                        <div class="blur"></div>
                     </div>
                     <div id="song2">
                         <div class="song-title"></div>
                         <img src="" alt="">
+                        <i class='bx bx-play'></i>
+                        <div class="blur"></div>
                     </div>
                     <div id="song3">
                         <div class="song-title"></div>
                         <img src="" alt="">
+                        <i class='bx bx-play'></i>
+                        <div class="blur"></div>
                     </div>
                 </div>
                 
