--- a/song detail/detail.html
+++ b/song detail/detail.html
@@ -92,7 +92,7 @@
                     <h2>Other MVs:</h2>
                     <div id="song1">
                         <div class="song-title"></div>
-                        <img src="" alt="">
+                        <img src="" alt="img">
                         <i class='bx bx-play'></i>
                         <div class="blur"></div>
                     </div>
