--- a/signup/signup.html
+++ b/signup/signup.html
@@ -21,7 +21,7 @@
         </div>
         <a href="../home/home.html" class="back-link">Back to website →</a>
         <div class="bg-img"></div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZCTJl40ONSQ?controls=0&autoplay=1&loop=1" style="border-radius: 15px; margin: 40px 0; position: relative; right: 10px"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZCTJl40ONSQ?controls=0&autoplay=1&loop=1" style="border-radius: 15px; position: relative; right: 10px"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <div class="hero-text">
           <h2>Create MVs,<br>Creating Memories</h2>
         </div>
