--- a/song detail/detail.html
+++ b/song detail/detail.html
@@ -92,19 +92,19 @@
                     <h2>Other MVs:</h2>
                     <div id="song1">
                         <div class="song-title"></div>
-                        <img src="" alt="img">
+                        <img src="" alt="...">
                         <i class='bx bx-play'></i>
                         <div class="blur"></div>
                     </div>
                     <div id="song2">
                         <div class="song-title"></div>
-                        <img src="" alt="">
+                        <img src="" alt="...">
                         <i class='bx bx-play'></i>
                         <div class="blur"></div>
                     </div>
                     <div id="song3">
                         <div class="song-title"></div>
-                        <img src="" alt="">
+                        <img src="" alt="...">
                         <i class='bx bx-play'></i>
                         <div class="blur"></div>
                     </div>
